<resources>
    <string name="app_name">C2L Todo</string>
    <string name="app_description">Manage &amp; Improve your workflow</string>
    <string name="login_title">Welcome Back!</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="password_forgot">Forgot?</string>
    <string name="login_button">Log In</string>
    <string name="alternative_signin">or sign in with</string>
    <string name="register"><font color="black">New user to C2l, </font><font color="#646aff">Register</font></string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="dailyTask">Daily Task</string>
    <string name="taskProgress"><font color="#646aff">4/6</font> Task</string>
    <string name="taskAdvise">Be more productive, keep it up 🔥</string>
    <string name="helloHero">Hello Cuong</string>
    <string name="sloganHero">Let\'s done your task today</string>
    <string name="fabAddMore">Add more Todo</string>
    <string name="viewTask">View</string>
    <string name="yourTask">Your task</string>
    <string name="defaultPercentage">60%\nDone</string>
    <string name="assign">Assigned</string>
    <string name="done">Done</string>
    <string name="filters">Filters</string>
    <string name="add_new">Add New</string>
    <string name="priority">Priority</string>
    <string name="defaultStartDate">16/03/2022</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dummyText">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable.</string>
    <string name="todoimage">todoImage</string>
    <string name="subtask_list">Subtask List</string>
    <string name="chung_ch_c_ng_todo_16">Chung Chí Cường todo 16</string>
    <string name="description">Description</string>
    <string name="task_1">Task 1</string>
    <string name="this_is_task_1_description">This is task 1 Description</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date_label">End date</string>
    <string name="status">Status</string>
    <string name="task_done_or_not">Task done or not?</string>
    <string name="tags">Tags</string>
    <string name="back">Back</string>
    <string name="update_task">Update Task</string>
    <string name="subtasks">Subtasks</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="update_todo">Update Todo</string>
    <string name="general_fab">General Fab</string>
    <string name="new_tags">New Tags</string>
    <string name="done_button">Done button</string>
    <string name="delete_button">Delete Button</string>
    <string name="nav_home">Nav Home</string>
    <string name="calendar_view">Calendar View</string>
    <string name="remain_todos">Remain Todos</string>
    <string name="done_todos">Done Todos</string>
    <string name="nav_login">Nav Login</string>
    <string name="nav_logout">Nav Logout</string>
    <string name="nav_profile">Nav Profile</string>
    <string name="c2l_todo">C2l Todo</string>
    <string name="manage_your_workflow">Manage your workflow</string>
    <string name="archive_button">Archive Button</string>
</resources>