<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@color/dashboardbg">

    <LinearLayout
        android:id="@+id/heroLinear"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvfullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_black"
                android:text="@string/helloHero"
                android:textColor="@color/title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sloganHero"
                android:textColor="@color/cardColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/title"
                android:elevation="40dp"
                android:text="@string/login_button"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlPassword" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/avatar" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/heroCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="15dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heroLinear">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvDaily"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/dailyTask"
                android:textColor="@color/cardColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvTaskProgress"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                app:tint="@color/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.004"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDaily"
                app:layout_constraintVertical_bias="0.086" />

            <TextView
                android:id="@+id/tvTaskProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/taskProgress"
                android:textAlignment="viewStart"
                android:textColor="@color/cardColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.029"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvDaily"
                app:layout_constraintVertical_bias="0.08" />

            <TextView
                android:id="@+id/tvAdvise"
                android:layout_width="173dp"
                android:layout_height="44dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/taskAdvise"
                android:textAlignment="viewStart"
                android:textColor="@color/cardColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.004"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTaskProgress"
                app:layout_constraintVertical_bias="0.172" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnViewTask"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/title"
                android:elevation="40dp"
                android:text="@string/viewTask"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAdvise" />
            <TextView
                android:id="@+id/tvProgressBar"
                android:textColor="@color/cardColor"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/taskProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/taskProgressBar"
                app:layout_constraintStart_toStartOf="@+id/taskProgressBar"
                app:layout_constraintTop_toTopOf="@+id/taskProgressBar"
                android:text="@string/defaultPercentage" />

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/taskProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:progress="70"
                app:cpb_background_progressbar_color="#DDD"
                app:cpb_background_progressbar_width="7dp"
                app:cpb_progress="60"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="100"
                app:cpb_progressbar_color="@color/title"
                app:cpb_progressbar_width="7dp"


                app:cpb_start_angle="45"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.897"
                app:layout_constraintStart_toEndOf="@+id/tvDaily"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tvYourtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/yourTask"
        android:textColor="@color/cardColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnCount"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroCard"
        app:layout_constraintVertical_bias="0.538" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCount"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="53dp"
        android:layout_height="38dp"
        android:textAlignment="center"
        android:backgroundTint="@color/title"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/overlay"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroCard"
        app:layout_constraintVertical_bias="0.405" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_marginTop="10dp"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodoList"
            android:layout_width="411dp"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heroCard" />

        <me.ibrahimsn.lib.SmoothBottomBar
            android:id="@+id/bottomAppBar"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:layout_width="match_parent"
            android:layout_gravity="bottom|center_vertical"
            android:layout_height="70dp"
            app:menu="@menu/app_bar_menu"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundColor="@color/title"
            app:textColor="@color/title"
            app:itemFontFamily="@font/poppins_regular"
            app:textSize="15sp"
            app:iconSize="20dp"
            app:iconTint="@color/overlay"
            app:cornerRadius="10dp"
            app:indicatorColor="@color/bottomBar"
            app:indicatorRadius="10dp"
            app:iconTintActive="@color/title"/>

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_anchorGravity="center_horizontal"-->
<!--            android:backgroundTint="@color/overlay"-->
<!--            android:contentDescription="@string/fabAddMore"-->
<!--            android:src="@drawable/add"-->
<!--            app:borderWidth="0dp"-->
<!--            app:layout_anchor="@id/bottomAppBar"-->
<!--            app:maxImageSize="35dp"-->
<!--            app:tint="@color/title" />-->


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>