<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    >

        <ImageView
            android:id="@+id/todoLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/todo_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todoTitle"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/todoLogo"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/email_label"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todoTitle" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/title"
            app:startIconTint="@color/title"
            app:startIconDrawable="@drawable/ic_email"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:paddingTop="8dp"
                android:textColor="@color/title"
                android:backgroundTint="@color/overlay"
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:textColor="@color/title"
            android:id="@+id/tvPassword"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/password_label"
            android:textAllCaps="true"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/title"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/title"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/overlay"
                    android:inputType="textPassword"
                    android:paddingTop="8dp"
                    android:textColor="@color/title" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:backgroundTint="@color/title"-->
<!--            android:elevation="40dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/login_button"-->
<!--            app:cornerRadius="50dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tlPassword" />-->

        <TextView
            android:id="@+id/tvforgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="440dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password_forgot"
            android:textColor="@color/title"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/tlPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.824"
            app:layout_constraintStart_toEndOf="@+id/tvPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <com.apachat.loadingbutton.core.customViews.CircularProgressButton
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="6dp"
            android:backgroundTint="@color/title"
            android:elevation="40dp"
            android:textColor="@color/white"
            android:text="@string/login_button"
            app:cornerRadius="50dp"
            app:initialCornerAngle="50dp"
            app:finalCornerAngle="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlPassword"
            />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:elevation="100dp"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlternativeLogin"
            app:layout_constraintVertical_bias="0.134" />

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="100dp"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlternativeLogin"
            app:layout_constraintVertical_bias="0.315" />

        <ImageView
            android:id="@+id/btnGithub"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:elevation="100dp"
            android:src="@drawable/github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toEndOf="@+id/btnGoogle"
            app:layout_constraintTop_toBottomOf="@+id/tvAlternativeLogin"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/tvAlternativeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/alternative_signin"
            android:textColor="@color/title"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            tools:layout_editor_absoluteX="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>